components/ssdlb/k8s/icap-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: icap-service
  namespace: default
spec:
  selector:
    app: icap
  ports:
  - port: 80
    targetPort: 5678
