components/ssdlb/k8s/icap-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: icap-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "icap.local"
